--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -144,7 +144,7 @@
             </p:panelGrid>
         </p:tab>
         
-        <h:panelGroup rendered="#{applicationBean.isCanUsesDelo()}">
+        <h:panelGroup rendered="#{applicationBean.isCanUsesProcess()}">
             <ui:include src="/view/docs/doc-links.xhtml"/>                
             <ui:include src="/view/docs/docStatus/docstatus-list.xhtml"/>
         </h:panelGroup>
