--- a/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
@@ -6,7 +6,7 @@
     
     <ui:param name="_bean" value="#{folderExplBean}" />
     <ui:param name="_treeBean" value="#{foldersBean}" />
-    <ui:param name="_detailBean" value="#{docBean}" />
+    <ui:param name="_detailBean" value="#{foldersBean}" />
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('FolderSelector')}"/>
