--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -79,7 +79,7 @@
                          emptyMessage="#{bundle.EmptyTable}" 
                          paginator="true" paginatorPosition="bottom"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                         rowsPerPageTemplate="10,25,50" rows="10" 
+                         rowsPerPageTemplate="5, 10, 25, 50" rows="10" 
                          currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord} "
                          tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
                          sortBy="#{item.dateSent}" sortOrder="descending"
