--- a/escom-bpm-web/src/main/webapp/view/processes/elements/docstate-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/docstate-card.xhtml
@@ -23,7 +23,7 @@
     <ui:define name="centerFormContent">       
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{conditionCardBean.editedItem != null}" >
             <p:tab title="#{bundle.Status}"  >
-                <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" >
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
                     <p:outputLabel value="#{bundle.ChangeDocumentStateTo}:" />
                     <p:selectOneMenu value="#{docStatusCardBean.selectedState}" converter="stateConvertor"
                                      styleClass="ui-grid-col-12">
@@ -46,6 +46,8 @@
                         <f:selectItem itemValue="fail" itemLabel="#{bundle.Red}"/>
                         <f:selectItem itemValue="completed" itemLabel="#{bundle.Gray}"/>
                     </p:selectOneMenu>
+                                        
+                    <p:selectBooleanCheckbox value="#{docStatusCardBean.editedItem.isSaveInProc}" itemLabel="#{bundle.SaveAsProcResult}"/> 
                 </p:panelGrid>
             </p:tab>
         </p:tabView>
