--- a/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
@@ -43,7 +43,7 @@
         <p:column headerText="#{bundle.Number}" sortBy="#{item.number}" >
             <h:outputText value="#{item.regNumber}"/>
         </p:column> 
-        <p:column headerText="#{bundle.TermApproval}" width="90" priority="3" sortBy="#{item.planExecDate}">
+        <p:column headerText="#{bundle.Term}" width="80" sortBy="#{item.planExecDate}">
             <h:outputLabel value="#{item.planExecDate}">
                 <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
             </h:outputLabel>
