--- a/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
@@ -16,7 +16,7 @@
     </ui:define>
 
     <ui:define name="page_body">
-        <p:tab id="cardTab" title="#{bundle.ProcessType}">
+        <p:tab id="cardTab" title="#{bundle.ProcessType}:">
             <p:panelGrid columns="1"  styleClass="ui-panelgrid-blank ui-grid-col-12"
                          columnClasses="ui-grid-col-12">
                 <p:outputLabel value="#{bundle.Name}"/>
@@ -32,7 +32,16 @@
         
         <p:tab title="#{bundle.Settings}">
             <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
-                <p:outputLabel value="#{bundle.ListResults}" indicateRequired="true"/>
+                <p:outputLabel value="#{bundle.DefaultTaskName}:" indicateRequired="true"/>
+                <p:inputText value="#{_bean.editedItem.defaultTaskName}"
+                             styleClass="ui-grid-col-12"
+                             onkeypress="checkEsc();"
+                             onchange="return itemChange = 1;"
+                             disabled="#{_bean.isReadOnly()}"
+                             required="#{param['isRequired'] == 'true'}"
+                             requiredMessage="#{bundle.Field} [#{bundle.DefaultTaskName}] #{bundle.MustBeFilled}"/>
+                
+                <p:outputLabel value="#{bundle.ListResults}:" indicateRequired="true"/>
                 <p:separator style="margin-top: 0em;"/>
                 <p:pickList id="pickList" value="#{processTypesCardBean.results}" var="result" converter="resultConverter"
                             disabled="#{processTypesCardBean.isReadOnly()}"
