--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -25,7 +25,7 @@
             }
         </script> 
 
-        <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" > 
+        <h:form id="mainFRM" style="font-size: 90%; height: 100%;"  > 
             <p:focus context="mainFRM:mainTabView" for="mainFRM:mainTabView:nameItem"/>
             <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
                 <f:facet name="header">
@@ -33,6 +33,7 @@
                 </f:facet>
                 <f:facet name="actions">
                     <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
+                                   rendered="#{!_bean.isFullPageMode() and _canClose == null ? true : _canClose}"
                                    actionListener="#{_bean.onCancelItemSave()}"  
                                    onclick="sendFormSize('#{_bean.getFormName()}');
                                                    if (itemChange == 1) {
