--- a/escom-bpm-web/src/main/webapp/view/processes/diagramma.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/diagramma.xhtml
@@ -3,7 +3,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:pe="http://primefaces.org/ui/extensions"
-                template="/view/templ/templ-dlg.xhtml"
+                template="/view/templ/templ-layout.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:param name="_bean" value="#{processBean.diagramBean}"/>
