выгрузка папки в архив - версия ос

--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -249,4 +249,7 @@
             <ui:include src="/view/common/file-uppload.xhtml" />
         </h:panelGroup>
     </ui:define>
+    
+    <ui:define name="form_scripts">         
+    </ui:define>
 </ui:composition>
