--- a/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
@@ -216,7 +216,8 @@
                     </p:commandButton>
                     
                     <ui:include src="/view/common/exeption-handler.xhtml"/> 
-                    <p:remoteCommand name="afterFormLoad" actionListener="#{_bean.onAfterFormLoad()}" autoRun="true"/>
+                    <p:remoteCommand name="afterFormLoad" onstart="getOS();" actionListener="#{_bean.onAfterFormLoad()}" autoRun="true"/>
+                    <p:remoteCommand name="setVersionOS" actionListener="#{_bean.setVersionOS()}" />
                 </h:form>
             </pe:layoutPane>
         </pe:layout>
