--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -20,6 +20,7 @@
         <h:outputStylesheet library="css" name="em_style1.css"/>
         <f:view locale="#{sessionBean.locale}"></f:view>
         <h:outputScript library="js" name="detect-browser.js" /> 
+        <h:outputScript library="js" name="detect-os.js" /> 
     </h:head>
 
     <ui:insert name="preRendered"/>
